change light mode colors and update dashboard ui

--- a/react/src/styles/globels/classes.scss
+++ b/react/src/styles/globels/classes.scss
@@ -269,7 +269,7 @@
 
 .reset-filter {
   margin-top: 20px;
-  background: linear-gradient(30deg, var(--delete), var(--wheat));
+  background: var(--delete);
 }
 
 .gap {
