--- a/react/src/styles/page/_cart.scss
+++ b/react/src/styles/page/_cart.scss
@@ -189,5 +189,6 @@
 }
 
 .btn-buy {
-  background-color: var(--secondary) !important;
+  background-color: var(--third) !important;
+  color: var(--main) !important;
 }
