--- a/react/src/styles/globels/classes.css
+++ b/react/src/styles/globels/classes.css
@@ -60,7 +60,7 @@
   padding: clamp(6px, 1vw, 8px) clamp(10px, 1.2vw, 12px);
   font-weight: bold;
   letter-spacing: 1px;
-  font-size: clamp(12px, 1.1vw, 16px);
+  font-size: clamp(11px, 1.1vw, 16px);
   text-transform: capitalize;
   background-color: transparent;
 }
@@ -79,6 +79,9 @@
 .btn.main {
   background: var(--green);
 }
+.btn.main.border {
+  border: 1.5px solid var(--green);
+}
 .btn.main-outline {
   transition: 0.3s;
   border: 1.5px solid var(--green);
@@ -87,7 +90,16 @@
   background: var(--green);
   color: white !important;
 }
-.btn.transparent {
+.btn.cancel-outline {
+  transition: 0.3s;
+  border: 1.5px solid var(--third);
+  color: grey !important;
+}
+.btn.cancel-outline:hover {
+  background: var(--third);
+  color: var(--main) !important;
+}
+.btn.cancel-outline.transparent {
   background: transparent;
 }
 
@@ -148,7 +160,7 @@
   width: 100vw;
   height: 100vh;
   background: var(--overley);
-  z-index: 8;
+  z-index: 10;
 }
 
 .between {
@@ -240,6 +252,24 @@
   background: linear-gradient(60deg, var(--wheat), var(--green));
 }
 
+.header-sm {
+  font-size: 1.4rem;
+  position: relative;
+}
+.header-sm.underline-sm {
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.header-sm.underline-sm:before {
+  content: "";
+  top: initial;
+  bottom: -6px;
+  left: 0;
+  height: 2px;
+}
+
 .white {
   color: var(--main);
 }
@@ -302,7 +332,7 @@
   padding: 4px 6px;
   background: var(--wheat-light);
   color: var(--white) !important;
-  z-index: 4;
+  z-index: 10;
   white-space: nowrap;
   border-radius: 4px;
   letter-spacing: 0.8px;
@@ -443,4 +473,12 @@ small {
   width: -moz-fit-content;
   width: fit-content;
   padding: 0;
+}
+
+.no-data-80 {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=classes.css.map */
