--- a/react/src/styles/page/_footer.scss
+++ b/react/src/styles/page/_footer.scss
@@ -1,7 +1,7 @@
 @import "../variables.scss";
 
 footer {
-  background-color: var(--main);
+  // background-color: var(--main);
   padding-bottom: 0;
   padding-top: 20px;
   width: 100%;
