--- a/react/src/styles/page/_order.scss
+++ b/react/src/styles/page/_order.scss
@@ -119,7 +119,7 @@ table.order {
   display: inline-block;
   font-weight: bold;
   margin-top: 3px;
-  color: var(--white);
+  color: var(--third);
 }
 
 .order-delete-mobile {
