--- a/react/src/styles/page/_products.scss
+++ b/react/src/styles/page/_products.scss
@@ -136,7 +136,7 @@ aside {
   width: 20px;
 
   svg {
-    fill: white;
+    fill: var(--third);
     &:not(&.svg-heart) {
       transform: scale(1.3);
     }
@@ -235,7 +235,7 @@ svg.svg-star {
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
     white-space: pre-wrap;
-    color: white;
+    color: var(--third);
     max-width: 90%;
   }
 
