--- a/react/src/styles/page/_sort.scss
+++ b/react/src/styles/page/_sort.scss
@@ -29,11 +29,11 @@
   .view-type {
     width: 80px;
     gap: 10px;
-
     font-size: 1.2rem;
 
     .view-icon {
-      transition: 0.3s;
+      // transition: 0.3s;
+
       &.shadow {
         filter: drop-shadow(0.5px 1.5px 1px black);
       }
@@ -57,7 +57,6 @@
 }
 
 .search {
-  // width: 50%;
   position: relative;
   background: var(--secondary);
   box-shadow: var(--third-shadow);
@@ -78,7 +77,7 @@
     height: 30px;
     border-radius: 5px;
     padding-right: 10px;
-    color: var(--white);
+    color: var(--third);
     letter-spacing: 0.8px;
     font-size: 0.9em;
     font-weight: 700;
@@ -89,7 +88,7 @@
   }
   .search-icon {
     font-size: 12px;
-    color: var(--white);
+    color: var(--third);
   }
 
   .dropdown-search {
