--- a/react/src/styles/App.css
+++ b/react/src/styles/App.css
@@ -344,7 +344,7 @@
 
 .reset-filter {
   margin-top: 20px;
-  background: linear-gradient(30deg, var(--delete), var(--wheat));
+  background: var(--delete);
 }
 
 .gap {
@@ -470,6 +470,11 @@ form.hide textarea {
 
 .h-50 {
   width: 100%;
+  min-height: 50vh;
+}
+
+.h-50-w-65 {
+  width: 65%;
   min-height: 50vh;
 }
 
@@ -656,16 +661,17 @@ input::-webkit-inner-spin-button {
   white-space: nowrap;
 }
 .log-in form {
-  background: var(--secondary);
+  background: #222222;
   width: 95vw;
   max-width: 350px;
   min-width: 260px;
   height: -moz-fit-content;
   height: fit-content;
-  padding: 40px 0;
+  padding: 20px 0;
   border-radius: 5px;
   flex-direction: column;
   box-shadow: 0.5px 0.5px 2px black;
+  padding-bottom: 40px;
   gap: 25px;
   overflow: hidden;
 }
@@ -815,13 +821,6 @@ nav {
 }
 nav .links-par {
   display: flex;
-  justify-content: space-between;
-  width: 60%;
-  min-width: 450px;
-}
-nav .links-par .e-commerce-features {
-  width: 90%;
-  justify-content: space-between;
 }
 nav ul {
   margin-left: 20px;
@@ -914,6 +913,8 @@ nav .nav-is-auth {
   display: flex;
   align-items: center;
   padding: 2px;
+  position: relative;
+  z-index: 10;
 }
 .theme .toggle-icon {
   width: 20px;
@@ -955,6 +956,7 @@ nav .nav-is-auth {
   }
   .aside-links .links a {
     font-size: 20px;
+    color: var(--third);
   }
   .aside-links .links a:before, .aside-links .links a:after {
     content: initial;
@@ -2388,7 +2390,7 @@ svg.svg-star {
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
   white-space: pre-wrap;
-  color: white;
+  color: var(--third);
   max-width: 90%;
 }
 .product-List .img-par {
@@ -2750,9 +2752,11 @@ svg.svg-star {
 
 .cart-cont {
   width: 100%;
+  margin: 0 auto;
   margin-top: 50px;
   gap: 4px;
   padding: 8px;
+  max-width: 1050px;
 }
 .cart-cont .carts-par {
   width: 65%;
@@ -2761,6 +2765,7 @@ svg.svg-star {
   min-height: 50vh;
 }
 .cart-cont .carts-par .cart-content {
+  width: 55%;
   gap: 10px;
   display: flex;
   flex-direction: column;
@@ -2768,7 +2773,6 @@ svg.svg-star {
   align-self: flex-start;
 }
 .cart-cont .carts-par .cart-content .cart-detail {
-  display: inline-block;
   display: inline-block;
   font-weight: bold;
   letter-spacing: 1px;
@@ -2780,18 +2784,24 @@ svg.svg-star {
   font-size: 0.8rem;
 }
 .cart-cont .carts-par .cart-content .cart-value {
-  display: inline-block;
+  display: inline-flex;
   letter-spacing: 0.7;
   color: var(--wheat);
+  width: 60%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
   font-size: 0.8rem;
 }
 .cart-cont .carts-par .cart-item {
   width: 100%;
-  height: 130px;
+  height: 165px;
+  padding: 7px;
   background: var(--main);
   box-shadow: var(--secondary-shadow);
-  padding: 8px;
   position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 .cart-cont .carts-par .cart-item .remove-cart {
   position: absolute;
@@ -2808,7 +2818,9 @@ svg.svg-star {
   background: var(--wheat-lighter);
 }
 .cart-cont .carts-par .cart-item .cart-img {
-  width: 80px;
+  width: 25%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .totel-price {
@@ -2840,7 +2852,7 @@ svg.svg-star {
   background: var(--wheat-light);
   border-radius: 4px;
   padding: 4px 8px;
-  width: 65%;
+  width: 100%;
   align-self: flex-start;
   box-shadow: var(--forth-shadow);
 }
@@ -2849,6 +2861,7 @@ svg.svg-star {
   gap: 10px;
   padding: 2vw;
   color: var(--white);
+  margin: 10px auto !important;
 }
 
 .free-par {
@@ -2903,7 +2916,7 @@ svg.svg-star {
 
 @media (max-width: 650px) {
   .cart-cont {
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
     margin-top: 50px;
   }
@@ -2931,8 +2944,8 @@ svg.svg-star {
 }
 
 .btn-buy {
-  background-color: var(--third) !important;
-  color: var(--main) !important;
+  background-color: #595959 !important;
+  color: var(--white) !important;
 }
 
 :root {
@@ -3089,7 +3102,7 @@ table.order tr:nth-child(odd) {
   display: inline-block;
   font-weight: bold;
   margin-top: 3px;
-  color: var(--white);
+  color: var(--third);
 }
 
 .order-delete-mobile {
@@ -3375,9 +3388,6 @@ table.order tr:nth-child(odd) {
   width: 80px;
   gap: 10px;
   font-size: 1.2rem;
-}
-.sort-par .view-type .view-icon {
-  transition: 0.3s;
 }
 .sort-par .view-type .view-icon.shadow, .sort-par .view-type .view-icon.custom-title, .sort-par .view-type .about-par p.view-icon.middle, .about-par .sort-par .view-type p.view-icon.middle {
   filter: drop-shadow(0.5px 1.5px 1px black);
@@ -4064,7 +4074,7 @@ input[type=range] {
 
 .reset-filter {
   margin-top: 20px;
-  background: linear-gradient(30deg, var(--delete), var(--wheat));
+  background: var(--delete);
 }
 
 .gap {
@@ -4190,6 +4200,11 @@ form.hide textarea {
 
 .h-50 {
   width: 100%;
+  min-height: 50vh;
+}
+
+.h-50-w-65 {
+  width: 65%;
   min-height: 50vh;
 }
 
@@ -4321,7 +4336,7 @@ small {
 }
 .update-user-slide input {
   margin: 0 auto;
-  color: white;
+  color: var(--third);
   background: var(--secondary);
 }
 
@@ -4468,11 +4483,11 @@ small {
   background: var(--secondary);
   display: flex;
   flex-direction: column;
-  border-top-right-radius: 20px;
   overflow: hidden;
   padding: 0;
   color: white;
   box-shadow: var(--third-shadow);
+  z-index: 6;
 }
 #dash-aside a {
   text-decoration: none;
@@ -4496,9 +4511,6 @@ small {
 
 .dash-product {
   min-height: 85vh;
-  height: -moz-max-content;
-  height: max-content;
-  margin: 0 auto;
   margin-bottom: 25px !important;
   position: relative;
 }
@@ -4574,9 +4586,6 @@ textarea.update-product {
   gap: 6px;
   margin-left: 10px;
   align-items: center;
-  position: absolute;
-  top: 20px;
-  left: 20px;
 }
 .crumbs .crumbs-line {
   margin: 10px;
@@ -4707,10 +4716,11 @@ a.crumb-link {
   width: 100%;
   color: var(--white);
   padding: 5px;
-  background-color: rgba(15, 115, 15, 0.847);
+  background-color: #1a474d;
   margin: 0 auto;
   height: 50px;
   font-size: 0.9rem;
+  border-radius: 5px;
 }
 .dash-main-charts .chart-par .order-recap-par .order-recap .order-recap-data {
   width: 90% !important;
@@ -4745,11 +4755,17 @@ a.crumb-link {
 }
 
 div.dash-nav {
-  position: absolute;
-  top: 10px;
-  right: 12px;
-  gap: 12px;
+  position: fixed;
+  top: 0px;
+  padding: 0 10px;
+  height: 40px;
+  right: 0;
   z-index: 5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--forth);
+  transition: 0.3s;
 }
 
 .notification-par {
@@ -4776,7 +4792,7 @@ div.dash-nav {
   text-transform: capitalize;
   letter-spacing: 0.5px;
   color: var(--third);
-  text-shadow: var(--secondary-shadow);
+  text-shadow: var(--third-shadow);
 }
 .notification-par .notification {
   background: var(--secondary);
@@ -4796,6 +4812,7 @@ div.dash-nav {
   font-size: 0.7rem;
   line-height: 0.8rem;
   letter-spacing: 0.8px;
+  font-weight: 700;
 }
 .notification-par .notification .time {
   font-size: 0.6rem;
@@ -4806,7 +4823,7 @@ div.dash-nav {
   position: absolute;
   top: 4px;
   right: 2px;
-  color: var(--wheat-light);
+  color: var(--wheat);
 }
 .notification-par .notification .is-read {
   display: inline-block;
