--- a/react/src/styles/globels/classes.scss
+++ b/react/src/styles/globels/classes.scss
@@ -28,12 +28,9 @@
   padding: clamp(6px, 1vw, 8px) clamp(10px, 1.2vw, 12px);
   font-weight: bold;
   letter-spacing: 1px;
-
   font-size: clamp(11px, 1.1vw, 16px);
-  // border-radius: 4px 10px;
   text-transform: capitalize;
   background-color: transparent;
-
   svg {
     path {
       filter: drop-shadow(var(--forth-shadow));
@@ -94,7 +91,7 @@
   margin: 0 auto;
   margin: 10px;
   span {
-    background: #040404;
+    // background: #040404;
     position: relative;
     top: -4px;
     display: inline-block;
@@ -195,7 +192,7 @@
 }
 
 .header {
-  @include kyiv(600, -400);
+  // @include kyiv(600, -400);
   filter: drop-shadow(var(--forth-shadow));
 }
 .underline {
@@ -359,11 +356,13 @@
 
 .continue-shopping {
   position: absolute;
-  top: 0px;
-  left: 5px;
-  background: linear-gradient(30deg, var(--wheat), var(--sale));
+  top: 25px;
+  right: 5px;
+  background: var(--sale);
   margin-top: 20px;
-
+  font-size: 0.8rem;
+  padding: 8px 5px;
+  gap: 2px;
   svg {
     font-size: 1.4rem;
   }
@@ -390,20 +389,19 @@ form {
   min-height: 80vh;
 }
 
-.nodata-w-80 {
-  width: 80%;
-  min-height: 80vh;
-}
 .h-50 {
   width: 100%;
-
   min-height: 50vh;
 }
-p,
-span,
-small {
-  @include kyiv(600, -400);
+.h-50-w-65 {
+  width: 65%;
+  min-height: 50vh;
 }
+// p,
+// span,
+// small {
+//   @include kyiv(600, -400);
+// }
 
 .gmail {
   color: var(--gmail);
@@ -441,4 +439,13 @@ small {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  color: var(--third);
+  transform: scale(0.3);
+  animation: slide-animation 10s linear forwards;
+
+  opacity: 0.7;
 }
