--- a/react/src/styles/page/_cart.scss
+++ b/react/src/styles/page/_cart.scss
@@ -2,15 +2,19 @@
 
 .cart-cont {
   width: 100%;
+  margin: 0 auto;
   margin-top: 50px;
   gap: 4px;
   padding: 8px;
+  max-width: 1050px;
   .carts-par {
     width: 65%;
     gap: 4px;
     align-self: flex-start;
     min-height: 50vh;
     .cart-content {
+      width: 55%;
+
       gap: 10px;
       display: flex;
       flex-direction: column;
@@ -18,8 +22,6 @@
       align-self: flex-start;
 
       .cart-detail {
-        display: inline-block;
-
         display: inline-block;
         font-weight: bold;
         letter-spacing: 1px;
@@ -31,19 +33,26 @@
         font-size: 0.8rem;
       }
       .cart-value {
-        display: inline-block;
+        display: inline-flex;
+
         letter-spacing: 0.7;
         color: var(--wheat);
+        width: 60%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
         font-size: 0.8rem;
       }
     }
     .cart-item {
       width: 100%;
-      height: 130px;
+      height: 165px;
+      padding: 7px;
       background: var(--main);
       box-shadow: var(--secondary-shadow);
-      padding: 8px;
       position: relative;
+      display: flex;
+      justify-content: space-between;
       .remove-cart {
         position: absolute;
         top: 5px;
@@ -60,7 +69,8 @@
       }
 
       .cart-img {
-        width: 80px;
+        width: 25%;
+        object-fit: contain;
       }
     }
   }
@@ -94,7 +104,7 @@
     background: var(--wheat-light);
     border-radius: 4px;
     padding: 4px 8px;
-    width: 65%;
+    width: 100%;
     align-self: flex-start;
     box-shadow: var(--forth-shadow);
   }
@@ -104,6 +114,7 @@
   gap: 10px;
   padding: 2vw;
   color: var(--white);
+  margin: 10px auto !important;
 }
 
 .free-par {
@@ -158,7 +169,7 @@
 }
 @media (max-width: 650px) {
   .cart-cont {
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
     margin-top: 50px;
 
@@ -189,6 +200,6 @@
 }
 
 .btn-buy {
-  background-color: var(--third) !important;
-  color: var(--main) !important;
+  background-color: #595959 !important;
+  color: var(--white) !important;
 }
