--- a/react/src/styles/page/_contact.scss
+++ b/react/src/styles/page/_contact.scss
@@ -14,7 +14,7 @@
     gap: 20px;
     form {
       width: 50%;
-      background: var(--secondary);
+      background: #222222;
       padding: 25px 0;
       display: flex;
       flex-direction: column;
@@ -32,7 +32,7 @@
     }
     .map {
       width: 45%;
-      height: 70%;
+      height: 110%;
       position: relative;
       z-index: 0;
       & > * {
