--- a/react/src/styles/page/login.css
+++ b/react/src/styles/page/login.css
@@ -46,16 +46,17 @@
   white-space: nowrap;
 }
 .log-in form {
-  background: var(--secondary);
+  background: #222222;
   width: 95vw;
   max-width: 350px;
   min-width: 260px;
   height: -moz-fit-content;
   height: fit-content;
-  padding: 40px 0;
+  padding: 20px 0;
   border-radius: 5px;
   flex-direction: column;
   box-shadow: 0.5px 0.5px 2px black;
+  padding-bottom: 40px;
   gap: 25px;
   overflow: hidden;
 }
