--- a/react/src/styles/page/login.scss
+++ b/react/src/styles/page/login.scss
@@ -62,7 +62,6 @@
     overflow: hidden;
     h2 {
       color: white;
-      @include kyiv(600, -400);
     }
     input {
       height: 30px;
@@ -84,7 +83,7 @@
   position: relative;
   top: 10px;
   span {
-    background-color: var(--secondary) !important;
+    background: #222222;
   }
 }
 
