convert stripe from restful to graphql

--- a/react/src/styles/page/_review-pop.scss
+++ b/react/src/styles/page/_review-pop.scss
@@ -124,6 +124,7 @@ p.review-user {
     top: 0px;
     left: 0;
     height: 100vh;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
