--- a/react/src/styles/App.css
+++ b/react/src/styles/App.css
@@ -429,20 +429,21 @@
 .order-pop-btn {
   margin-top: 20px;
   font-size: 0.8rem;
-  padding: 8px 5px;
+  padding: 0 8px;
+  height: 30px;
   gap: 2px;
 }
 .order-pop-btn.continue-shopping {
-  border: 1px solid var(--green);
   background: var(--green);
 }
 .order-pop-btn.view-order-btn {
   background: transparent;
   border: 1px solid grey;
-  color: white;
+  color: var(--third) !important;
   transition: 0.3s;
 }
 .order-pop-btn.view-order-btn:hover {
+  color: var(--white) !important;
   background-color: grey;
 }
 .order-pop-btn svg {
@@ -741,21 +742,14 @@ p {
   position: absolute;
   right: 5px;
   top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100%;
-  flex-direction: row-reverse;
 }
-.inp-parent .inp-controls .x-inp {
+.inp-parent .inp-controls svg {
   font-size: 1.2rem;
-  color: var(--gmail);
   cursor: pointer;
+  color: var(--gmail);
 }
-.inp-parent .inp-controls .pass-inp {
-  font-size: 1.2rem;
-}
-.inp-parent .inp-controls .pass-inp svg {
+.inp-parent .inp-controls svg.pass-icon {
   position: relative;
   z-index: 4;
   color: var(--wheat-light);
@@ -1492,13 +1486,14 @@ nav .nav-is-auth {
 .product-page {
   overflow: hidden;
   display: flex;
-  min-height: calc(100vh - 40px);
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
   width: 90%;
-  max-width: 800px;
-  margin: 10px auto;
+  max-width: 950px;
   gap: 40px;
+  padding: 15px 0;
+  margin: 0 auto;
 }
 .product-page .images {
   width: 45%;
@@ -1507,17 +1502,13 @@ nav .nav-is-auth {
   flex-direction: column;
   justify-content: space-evenly;
   justify-content: flex-end;
-  gap: 20px;
+  gap: 15px;
 }
 .product-page .images .big-img-par {
-  padding: 20px;
-  height: auto;
+  height: 350px;
   width: 300px;
-  height: auto;
-  position: relative;
   display: flex;
   align-items: flex-end;
-  overflow-y: none;
   justify-content: center;
 }
 .product-page .images .big-img-par img {
@@ -1546,7 +1537,7 @@ nav .nav-is-auth {
   padding: 5px;
   height: 50px;
   width: 9vw;
-  max-width: 70px;
+  max-width: 50px;
 }
 .product-page .images .small-img-par .small-img img {
   height: 50px;
@@ -1604,7 +1595,8 @@ p {
   text-align: justify;
   letter-spacing: 0.8px;
   color: var(--secondary);
-  margin-bottom: 10px;
+  margin: 10px 0;
+  margin-top: 15px;
 }
 p::first-letter {
   color: var(--green);
@@ -1729,19 +1721,16 @@ p::first-letter {
     margin: 0 auto;
   }
   .product-page .images .small-img-par {
+    max-width: initial;
     align-self: center;
+    overflow: hidden;
+    align-items: center;
   }
 }
 .big-img-par {
   width: 100vw !important;
   height: 50vh;
   position: relative;
-}
-.big-img-par .zoom div:nth-child(2) {
-  background-color: var(--main);
-  position: fixed !important;
-  top: 0;
-  left: 0;
 }
 
 .counter-par {
@@ -1917,12 +1906,13 @@ p.review-user {
   border-radius: 4px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 650px) {
   .pop-up-reviews {
     position: fixed;
     top: 0px;
     left: 0;
     height: 100vh;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1931,7 +1921,7 @@ p.review-user {
     z-index: 10;
   }
   .pop-up-reviews h2 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .pop-up-reviews h2.underline:before {
     top: 180%;
@@ -2100,7 +2090,7 @@ p.review-user {
     justify-content: center !important;
     align-items: center !important;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 70px;
     padding: 0;
   }
   .banner-par .banner .banner-image {
@@ -4193,20 +4183,21 @@ input[type=range] {
 .order-pop-btn {
   margin-top: 20px;
   font-size: 0.8rem;
-  padding: 8px 5px;
+  padding: 0 8px;
+  height: 30px;
   gap: 2px;
 }
 .order-pop-btn.continue-shopping {
-  border: 1px solid var(--green);
   background: var(--green);
 }
 .order-pop-btn.view-order-btn {
   background: transparent;
   border: 1px solid grey;
-  color: white;
+  color: var(--third) !important;
   transition: 0.3s;
 }
 .order-pop-btn.view-order-btn:hover {
+  color: var(--white) !important;
   background-color: grey;
 }
 .order-pop-btn svg {
@@ -5371,14 +5362,14 @@ footer .footer-links span a {
   display: flex;
   width: 95vw;
   max-width: 950px;
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh - 90px);
   justify-content: space-between;
   align-items: flex-start;
   color: var(--third) !important;
   gap: 50px;
   margin: 0 auto;
-  margin-top: 70px;
-  margin-bottom: 20px;
+  margin-top: 80px;
+  margin-bottom: 10px;
   padding: 0 20px;
 }
 .payment .ordered-products {
@@ -5399,15 +5390,16 @@ footer .footer-links span a {
   text-transform: capitalize;
   font-weight: bold;
   font-size: 1rem;
-  padding: 5px 0;
+  padding: 5px;
 }
 .payment .ordered-products .ordered-product .detail {
   color: var(--third);
   padding: 0;
-  font-weight: 500;
+  font-weight: 600;
 }
 .payment .ordered-products .ordered-product .value {
   padding: 0;
+  text-shadow: var(--forth-shadow);
   color: var(--wheat);
 }
 .payment .ordered-products .ordered-product .value .price-top {
@@ -5463,22 +5455,24 @@ form#payment-form button {
   border-radius: 5px;
   height: 40px;
   margin: 0 auto;
+  width: 120px;
 }
 
 .order-confirmed {
-  color: white;
+  color: var(--third);
   gap: 5px;
   height: 250px;
 }
 .order-confirmed h1 {
   font-size: 2rem;
   text-transform: capitalize;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 .order-confirmed p {
-  width: 95%;
+  width: 90%;
   color: grey;
   text-align: center;
+  margin: 0px;
 }
 .order-confirmed p::first-letter {
   margin: 0;
@@ -5486,9 +5480,6 @@ form#payment-form button {
 }
 
 @media (max-width: 650px) {
-  .order-confirmed {
-    height: 100vh;
-  }
   .payment {
     width: 95%;
     flex-direction: column;
@@ -5501,6 +5492,14 @@ form#payment-form button {
     width: 100%;
   }
 }
+#cardNumber,
+#expiry,
+#cvc {
+  width: 80%;
+  height: 30px;
+  background-color: green;
+}
+
 :root {
   --green: #237a44;
   --wheat: rgb(202, 170, 109);
