fix tokens bug && make all images with same dimenions

--- a/react/src/styles/page/_news-leter.scss
+++ b/react/src/styles/page/_news-leter.scss
@@ -3,7 +3,7 @@
 .newsletter {
   width: 100%;
   background: rgb(153, 136, 104);
-  background-image: url(./../assets/Images/newLetterBackground.png);
+  background-image: url("./../assets/Images/footer/newLetterBackground.png");
   background-size: cover;
   background-position: center;
   position: relative;
