--- a/react/src/styles/page/_slide-btn.scss
+++ b/react/src/styles/page/_slide-btn.scss
@@ -50,12 +50,13 @@
   margin: 0 auto;
   height: 40px;
   .rate-inp {
-    border-radius: 10px;
+    border-radius: 2px;
     width: 100%;
     background: #000;
     color: white;
     padding: 5px;
     letter-spacing: 0.8px;
+    font-size: 0.8rem;
   }
 }
 
