--- a/react/src/styles/page/_payment.scss
+++ b/react/src/styles/page/_payment.scss
@@ -12,7 +12,7 @@
   margin: 0 auto;
   margin-top: 80px;
   margin-bottom: 10px;
-  padding: 0 20px;
+  padding: 0 25px;
   .ordered-products {
     width: 40%;
     height: 100%;
@@ -20,44 +20,49 @@
     align-items: center;
     justify-content: flex-start;
     margin-top: 30px;
+    gap: 10px;
     h2 {
       margin: 0;
       margin-bottom: 12px;
       align-self: flex-start;
     }
-    .ordered-product {
-      width: 100%;
-      text-transform: capitalize;
-      font-weight: bold;
-      font-size: 1rem;
-      padding: 5px;
-      .detail {
-        color: var(--third);
-        padding: 0;
-        font-weight: 600;
-      }
-      .value {
-        padding: 0;
-        text-shadow: var(--forth-shadow);
+    .detail {
+      color: var(--third);
+      padding: 0;
+      font-weight: 600;
+      // padding-left: 5px;
+    }
+    .value {
+      padding: 0;
+      text-shadow: var(--forth-shadow);
 
-        color: var(--wheat);
-        .price-top {
-          bottom: -2px;
-        }
-        .price-product {
-          font-size: 1.2rem !important;
-          margin-top: 0;
-        }
+      color: var(--wheat);
+      .price-top {
+        bottom: -4px;
+        font-size: 0.6rem;
+      }
+      .price-product {
+        font-size: 1.2rem !important;
+        margin-top: 0;
+      }
+      .ordered-product {
+        padding: 15px;
+        width: 100%;
+        text-transform: capitalize;
+        font-weight: bold;
+        font-size: 1rem;
       }
       h3 {
         text-transform: capitalize;
-        margin: 10px 0;
-      }
-      .or {
-        width: 100%;
-        margin: 0 auto;
+        margin-top: 10px;
       }
     }
+  }
+  .pay-or {
+    width: 100%;
+    height: 0.5px;
+    background-color: var(--third);
+    opacity: 0.2;
   }
 }
 
@@ -123,9 +128,6 @@ form#payment-form {
   }
 }
 @media (max-width: 650px) {
-  // .order-confirmed {
-  //   height: 100vh;
-  // }
   .payment {
     width: 95%;
     flex-direction: column;
@@ -133,17 +135,12 @@ form#payment-form {
     .ordered-products {
       width: 100%;
       justify-content: flex-start;
+      .total-pay {
+        align-self: flex-start;
+      }
       .ordered-product {
         width: 100%;
       }
     }
   }
-}
-
-#cardNumber,
-#expiry,
-#cvc {
-  width: 80%;
-  height: 30px;
-  background-color: green;
 }
