--- a/react/src/styles/page/login.scss
+++ b/react/src/styles/page/login.scss
@@ -1,4 +1,3 @@
-@import "../globels/mixins";
 .log-in {
   width: 100%;
   min-height: 100vh;
@@ -39,11 +38,13 @@
     gap: 20px;
     box-shadow: var(--third-shadow);
     text-transform: capitalize;
-    font-weight: bold;
+    font-weight: 500;
     color: var(--wheat);
     letter-spacing: 1px;
     cursor: pointer;
     white-space: nowrap;
+    font-size: 1.3rem;
+    justify-content: center;
   }
   form {
     background: #222222;
