--- a/react/src/styles/page/_dropdown.scss
+++ b/react/src/styles/page/_dropdown.scss
@@ -94,6 +94,7 @@
   // z-index: 6;
   text-transform: capitalize;
   letter-spacing: 1px;
+  overflow: hidden;
   img {
     position: relative;
     z-index: 3;
