--- a/react/src/styles/page/_product.scss
+++ b/react/src/styles/page/_product.scss
@@ -13,17 +13,14 @@
   margin: 0 auto;
   .images {
     width: 45%;
-    height: 100%;
-    align-self: flex-end;
+    height: 80%;
     flex-direction: column;
-    justify-content: space-evenly;
-    justify-content: flex-end;
+    justify-content: center;
 
     gap: 15px;
     .big-img-par {
       width: 100%;
       height: 350px;
-
       display: flex;
       align-items: flex-end;
       justify-content: center;
@@ -51,21 +48,22 @@
     .small-img-par {
       align-self: center;
 
-      height: 80px;
-      width: 250px;
-      justify-content: space-between;
-
-      gap: 4px;
+      height: 60px;
+      min-width: 300px;
+      justify-content: center;
+      align-items: center;
+      gap: 5px;
+      position: relative;
 
       .small-img {
         padding: 5px;
         height: 50px;
-        width: 9vw;
-        max-width: 50px;
+        width: clamp(50px, 9vw, 70px);
+
         img {
           height: 50px;
-          width: 9vw;
-          max-width: 70px;
+          width: clamp(50px, 9vw, 70px);
+
           object-fit: contain;
           filter: drop-shadow(1.5px 4px 1.5px black);
         }
@@ -197,7 +195,7 @@ p {
   font-weight: bold;
   font-style: 12px;
   z-index: 1;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   background: var(--wheat-lighter);
 }
 .stock-par {
@@ -234,10 +232,7 @@ p {
   font-weight: bold;
   color: var(--secondary);
 }
-.product-image-lazy {
-  width: fit-content;
-  height: 200px;
-}
+
 @media (max-width: 650px) {
   .product-page {
     min-height: 100vh;
@@ -252,14 +247,13 @@ p {
       margin: 0 auto;
       overflow: hidden;
       height: fit-content;
-
       .small-img-par {
         align-self: center;
         align-items: center;
       }
       .big-img-par {
         width: 100vw !important;
-        height: 300px;
+        height: 400px;
         position: relative;
         img {
           height: 60%;
@@ -267,4 +261,8 @@ p {
       }
     }
   }
+}
+
+.add-rate-pop {
+  margin-top: 10px;
 }
