--- a/react/src/styles/page/_products.scss
+++ b/react/src/styles/page/_products.scss
@@ -12,6 +12,9 @@
   padding: 20px 0;
   padding-bottom: 10px;
   flex-direction: column;
+  h1 {
+    margin-bottom: 0;
+  }
 }
 
 aside {
@@ -330,32 +333,38 @@ svg.svg-star {
 }
 
 .products-animation-par {
-  width: 100%;
-  height: 200px;
+  width: 100vw;
+  height: 25vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  .swiper-coverflow {
+    padding: 30px 0;
+  }
 }
 
-.products-animate {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  box-shadow: 2px 2px 10px black;
-  width: 16vw;
-  height: 60%;
-  max-width: 100px;
+.products-animate-slide {
+  max-height: 22vw;
+  max-width: 20vw;
   background: var(--secondary);
   border-radius: 10px;
-  margin-bottom: 20px;
-  img {
-    margin: 10%;
-    width: 80%;
-    height: 80%;
+  box-shadow: var(--forth-shadow);
+}
+.products-animate {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  position: relative;
 
-    filter: drop-shadow(2px 5px 5px black);
+  height: 20vw;
+  width: 20vw;
+
+  .products-animate-img {
+    height: 18vw;
+    width: 18vw;
+    object-fit: contain;
+
+    filter: drop-shadow(var(--main-shadow));
   }
 }
 #star-details {
