--- a/react/src/styles/page/_counter.scss
+++ b/react/src/styles/page/_counter.scss
@@ -24,3 +24,9 @@
     overflow: hidden;
   }
 }
+.cart-not-available {
+  height: 30px;
+  text-transform: capitalize;
+  font-weight: bold;
+  color: var(--third);
+}
